--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -60,9 +60,9 @@
 		<div class="container">
 			<div class="row-fluid">
 				<div class="col-12 text-center col-centered">
-					<img class="foot__img" src="../resource/sap.png">
-					<img class="foot__img" src="../resource/microsoft.png">
-					<img class="foot__img" src="../resource/ibm.png">
+					<img class="foot__img" src="../resource/sap.png" alt="image not found">
+					<img class="foot__img" src="../resource/microsoft.png" alt="image not found">
+					<img class="foot__img" src="../resource/ibm.png" alt="image not found">
 					<p class="foot__text">Tel: 018-66 67 12 - E-post: info@jstm.se - Besöksadress: Tulegatan 44, 11 353 Stockholm - Postadress / Fakturaadress</p>
 					<p></p>
 					<p class="foot__text">© Copyright 2017 - JSTM Solutions</p>
