--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -8,12 +8,12 @@
 		<link href='../style/style.css' rel='stylesheet'  type='text/css'>
 	</head>
 	<body>
-		<header>
+	<header>
 		<div class="container col-12 col-md-12" style="border-radius: 0px;">
 			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
-			  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			  </button>
+				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 			  <a class="navbar-brand logo" href="../../index.html">J|S|T|M</a>
 
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -37,14 +37,14 @@
 						<h1 class="bold">Hej!</h1>
 						<h1 class="bold">Vi är här för att hjälpa dig</h1>
 					
-					<div class="container">
-					<div class="row row-offcanvas row-offcanvas-center">
+				<div class="container">
+				<div class="row row-offcanvas row-offcanvas-center">
 					<div class="col-12 col-md-12">
 						<p class="float-right hidden-md-up">
 						</p>
 						<div class="row">
 							<div class="col-12 col-lg-6 bg__color">
-								<img class="img-thumbnail img-fluid img-responsive " src="../resource/dveb.jpg">
+								<img class="img-thumbnail img-fluid img-responsive " src="../resource/dveb.jpg" alt="image not found">
 								<ul>
 									<li>Fredrik Bengtsson, VD</li>
 									<li>Tel. 070 - 123 45 67</li>
@@ -52,7 +52,7 @@
 								</ul>
 							</div>
 							<div class="col-12 col-lg-6 bg__color">
-								<img class="img-thumbnail img-responsive img-fluid" src="../resource/dveb2.jpg">
+								<img class="img-thumbnail img-responsive img-fluid" src="../resource/dveb2.jpg" alt="image not found">
 								<ul>
 									<li>Mikael Lindgren, Konsult</li>
 									<li>Tel. 070 - 123 45 67</li>
@@ -60,7 +60,7 @@
 								</ul>
 							</div>
 							<div class="col-12 col-lg-6 bg__color">
-								<img class="img-thumbnail img-responsive img-fluid" src="../resource/dveb3.jpg">
+								<img class="img-thumbnail img-responsive img-fluid" src="../resource/dveb3.jpg" alt="image not found">
 								<ul>
 									<li>Anna Nilsson, Rekryterare</li>
 									<li>Tel. 070 - 123 45 67</li>
@@ -68,32 +68,34 @@
 								</ul>
 							</div>
 							<div class="col-12 col-lg-6 bg__color">
-								<img class="img-thumbnail img-responsive img-fluid" src="../resource/dveb4.jpg">
+								<img class="img-thumbnail img-responsive img-fluid" src="../resource/dveb4.jpg" alt="image not found">
 								<ul>
 									<li>Helena Söderström, Chef</li>
 									<li>Tel. 070 - 123 45 67</li>
 									<li>E-post: helena.soderstrom@jstm.se</li>
 								</ul>
 							</div>
-						  </div>
 						</div>
 					</div>
+				</div>
 			</div>
-		</header>
-			<footer>
+		</div>
+	</div>
+	</header>
+	<footer>
 		<div class="container">
 			<div class="row-fluid">
 				<div class="col-12 text-center col-centered">
-					<img class="foot__img" src="../resource/sap.png">
-					<img class="foot__img" src="../resource/microsoft.png">
-					<img class="foot__img" src="../resource/ibm.png">
+					<img class="foot__img" src="../resource/sap.png" alt="image not found">
+					<img class="foot__img" src="../resource/microsoft.png" alt="image not found">
+					<img class="foot__img" src="../resource/ibm.png" alt="image not found">
 					<p class="foot__text">Tel: 018-66 67 12 - E-post: info@jstm.se - Besöksadress: Tulegatan 44, 11 353 Stockholm - Postadress / Fakturaadress</p>
 					<p></p>
 					<p class="foot__text">© Copyright 2017 - JSTM Solutions</p>
 				</div>
 			</div>
 		</div>
-		</footer>
+	</footer>
 	
 	
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
