--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='se'>
+<html lang='sv'>
 	<head>
 		<title>Products</title>
 		<meta charset="utf-8">
@@ -16,9 +16,8 @@
 			  </button>
 			  <a class="navbar-brand logo" href="../../index.html">J|S|T|M</a>
 
-			  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
-					
 					<li class="nav-item active">
 						<a class="nav-link" href="products.html">Våra Produkter<span class="sr-only">(current)</span></a>
 					</li>
@@ -29,11 +28,11 @@
 						<a class="nav-link" href="contact.html">Kontakt<span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
-			  </div>
+				</div>
 			</nav>
-		
+		</div>
 		<main>
-		<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/IT-Services.jpg'); 
+	<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/IT-Services.jpg'); 
 		no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 		-o-background-size: cover; background-size: cover; min-height: 600px;">
 			<h1 class="text__white bold">Digitalisera dina affärsmodeller och
@@ -82,14 +81,16 @@
 			
 				</div>
 			</div>
-		</main>
+		</div>
+	
+	</main>
 	<footer>
 		<div class="container">
 			<div class="row-fluid">
 				<div class="col-12 text-center col-centered">
-					<img class="foot__img" src="../resource/sap.png">
-					<img class="foot__img" src="../resource/microsoft.png">
-					<img class="foot__img" src="../resource/ibm.png">
+					<img class="foot__img" src="../resource/sap.png" alt="image not found">
+					<img class="foot__img" src="../resource/microsoft.png" alt="image not found">
+					<img class="foot__img" src="../resource/ibm.png" alt="image not found">
 					<p class="foot__text">Tel: 018-66 67 12 - E-post: info@jstm.se - Besöksadress: Tulegatan 44, 11 353 Stockholm - Postadress / Fakturaadress</p>
 					<p></p>
 					<p class="foot__text">© Copyright 2017 - JSTM Solutions</p>
