--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<link href='assets/style/style.css' rel='stylesheet'  type='text/css'>
 	</head>
-	<body><div class="container col-12 col-md-12" style="border-radius: 0px;">
-		<header>
+	<body>
+	<header>
+		<div class="container col-12 col-md-12" style="border-radius: 0px;">
 			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -46,9 +47,9 @@
 		<div class="container">
 			<div class="row-fluid">
 				<div class="col-12 text-center col-centered">
-					<img class="foot__img" src="assets/resource/sap.png">
-					<img class="foot__img" src="assets/resource/microsoft.png">
-					<img class="foot__img" src="assets/resource/ibm.png">
+					<img class="foot__img" src="assets/resource/sap.png" alt="image not found">
+					<img class="foot__img" src="assets/resource/microsoft.png" alt="image not found">
+					<img class="foot__img" src="assets/resource/ibm.png" alt="image not found">
 					<p class="foot__text">Tel: 018-66 67 12 - E-post: info@jstm.se - Besöksadress: Tulegatan 44, 11 353 Stockholm - Postadress / Fakturaadress</p>
 					<p></p>
 					<p class="foot__text">© Copyright 2017 - JSTM Solutions</p>
