Small tweks to the semantics

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -8,17 +8,16 @@
 		<link href='../style/style.css' rel='stylesheet'  type='text/css'>
 	</head>
 	<body>
-		
+	<main>	
 		<div class="container col-12 col-md-12" style="border-radius: 0px;">
+		<header>
 			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
 			  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
 			  <a class="navbar-brand logo" href="../../index.html">J|S|T|M</a>
-
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
-				
 					<li class="nav-item active">
 						<a class="nav-link" href="products.html">Våra Produkter<span class="sr-only">(current)</span></a>
 					</li>
@@ -31,6 +30,7 @@
 				</ul>
 			  </div>
 			</nav>
+		</header>
 			<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/default.jpg'); 
 						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 						-o-background-size: cover; background-size: cover; min-height: 600px;">
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 			</div>
-		
+	</main>
 	<footer>
 		<div class="container">
 			<div class="row-fluid">
