--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -8,8 +8,9 @@
 		<link href='../style/style.css' rel='stylesheet'  type='text/css'>
 	</head>
 	<body>
-	<header>
+	<main>
 		<div class="container col-12 col-md-12" style="border-radius: 0px;">
+		<header>
 			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -31,6 +32,7 @@
 				</ul>
 			  </div>
 			</nav>
+		</header>
 			<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/cont.jpg'); 
 						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 						-o-background-size: cover; background-size: cover; min-height: 600px;">
@@ -81,7 +83,7 @@
 			</div>
 		</div>
 	</div>
-	</header>
+	</main>
 	<footer>
 		<div class="container">
 			<div class="row-fluid">
