--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -8,37 +8,37 @@
 		<link href='../style/style.css' rel='stylesheet'  type='text/css'>
 	</head>
 	<body>
-		
+	<main>
 		<div class="container col-12 col-md-12" style="border-radius: 0px;">
-			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
-			  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			  </button>
-			  <a class="navbar-brand logo" href="../../index.html">J|S|T|M</a>
-
-				<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
-					<li class="nav-item active">
-						<a class="nav-link" href="products.html">Våra Produkter<span class="sr-only">(current)</span></a>
-					</li>
-				    <li class="nav-item active">
-						<a class="nav-link" href="about.html">Om oss<span class="sr-only">(current)</span></a>
-					</li>
-				    <li class="nav-item active">
-						<a class="nav-link" href="contact.html">Kontakt<span class="sr-only">(current)</span></a>
-					</li>
-				</ul>
-				</div>
-			</nav>
-		</div>
-		<main>
+			<header>
+				<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+				  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				  </button>
+				  <a class="navbar-brand logo" href="../../index.html">J|S|T|M</a>
+					<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+					<ul class="navbar-nav mr-auto mt-2 mt-md-0">
+						<li class="nav-item active">
+							<a class="nav-link" href="products.html">Våra Produkter<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="about.html">Om oss<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="contact.html">Kontakt<span class="sr-only">(current)</span></a>
+						</li>
+					</ul>
+					</div>
+				</nav>
+			</header>
+		
 	<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/IT-Services.jpg'); 
 		no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 		-o-background-size: cover; background-size: cover; min-height: 600px;">
 			<h1 class="text__white bold">Digitalisera dina affärsmodeller och
 			effektivisera processer</h1>
-				<div class="container">
-					<div class="row">
+			<div class="container">
+				<div class="row">
 					<div class="col-12 col-md-12">
 						<p class="float-right hidden-md-up">
 						</p>
@@ -79,10 +79,10 @@
 						  </div>
 						</div>
 			
+					</div>
 				</div>
 			</div>
 		</div>
-	
 	</main>
 	<footer>
 		<div class="container">
