More responsivly construktion and still validated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-			<a class="navbar-brand logo text__green" href="index.html">J|S|T|M</a>
+			<a class="navbar-brand logo" href="index.html">J|S|T|M</a>
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
 					<li class="nav-item active">
@@ -31,9 +31,8 @@
 			  </div>
 			</nav>
 		</header>
-				<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('assets/resource/default.jpg'); 
-					no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
-					-o-background-size: cover; background-size: cover; min-height: 600px;">
+				<div class="jumbotron container-fluid def__background" style="no-repeat center center fixed;
+	-webkit-background-size: cover; -o-background-size: cover;">
 					<h1 class="text__white bold">Vi skapar digitala lösningar som
 					framtidssäkrar ditt företag</h1>			
 				</div>
