--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -31,9 +31,8 @@
 			  </div>
 			</nav>
 		</header>
-			<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/default.jpg'); 
-						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
-						-o-background-size: cover; background-size: cover; min-height: 600px;">
+			<div class="jumbotron container-fluid def__background" style="no-repeat center center fixed;
+	-webkit-background-size: cover; -o-background-size: cover;">
 						<h1 class="text__white bold">Vägleder tillverkar företag i den digital omvandling</h1>
 					<div class="container">
 						<div class="row">
