--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -33,9 +33,8 @@
 			  </div>
 			</nav>
 		</header>
-			<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/cont.jpg'); 
-						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
-						-o-background-size: cover; background-size: cover; min-height: 600px;">
+			<div class="jumbotron container-fluid con__background" style="no-repeat center center fixed;
+	-webkit-background-size: cover; -o-background-size: cover;">
 						<h1 class="bold">Hej!</h1>
 						<h1 class="bold">Vi är här för att hjälpa dig</h1>
 					
