--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -32,9 +32,8 @@
 				</nav>
 			</header>
 		
-	<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/IT-Services.jpg'); 
-		no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
-		-o-background-size: cover; background-size: cover; min-height: 600px;">
+	<div class="jumbotron container-fluid it__background" style="no-repeat center center fixed;
+	-webkit-background-size: cover; -o-background-size: cover;">
 			<h1 class="text__white bold">Digitalisera dina affärsmodeller och
 			effektivisera processer</h1>
 			<div class="container">
